deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-app
  labels:
    app: lms-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lms-app
  template:
    metadata:
      labels:
        app: lms-app
    spec:
      containers:
      - name: lms-app
        image: 887194768979.dkr.ecr.us-east-1.amazonaws.com/lms-app
        ports:
        - containerPort: 8000   # change if your Django runs on different port
