service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lms-service
spec:
  selector:
    app: lms-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
