ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host:   # replace with your domain (GoDaddy, Route53, etc.)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms-service
            port:
              number: 80
